# mpi_tutorial

./: .gitignore  CMakeLists.txt  GroupOperators.cpp  LongMessage.cpp  main.cpp  mp.cpp
